<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:text="@string/filter_title"/>
    <RadioGroup
        android:id="@+id/filter_rg"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/filter_1">
        <RadioButton
            android:id="@+id/filter_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_label_1"/>
        <RadioButton
            android:id="@+id/filter_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_label_2"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/filter_cancel"
            android:elevation="2dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_apply"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/filter_apply"
            android:elevation="2dp"/>
    </LinearLayout>
</LinearLayout>